[CDAP-8273][CDAP-8703] Add/fix tooltip behaviors - Added default browser tooltip on all entity titles. - Added overflow ellipses on overview and detail view for long entity titles. - Fixed tooltip problem pointing to the wrong fast action

--- a/cdap-ui/app/cdap/components/Overview/OverviewMetaSection/OverviewMetaSection.scss
+++ b/cdap-ui/app/cdap/components/Overview/OverviewMetaSection/OverviewMetaSection.scss
@@ -26,6 +26,10 @@
 
   h2 {
     color: rgba(51, 51, 51, 1);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 95%;
   }
   .fast-actions-container {
     display: flex;
